# RVTX

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
bindings/python/: CMakeLists.txt
bindings/python/include/bindings/: defines.hpp
bindings/python/include/pyrvtx/: py_camera.hpp  py_engine.hpp  py_glm.hpp  py_graph.hpp  py_mesh.hpp  py_molecule.hpp  py_point_cloud.hpp  py_scene.hpp
bindings/python/src/: py_camera.cpp  py_engine.cpp  py_graph.cpp  py_mesh.cpp  py_molecule.cpp  py_point_cloud.cpp  py_scene.cpp
bindings/python/src/bindings/: module.cpp
bindings/python/src/bindings/gl/: window.cpp
bindings/python/src/bindings/pyrvtx/: py_camera.cpp  py_engine.cpp  py_graph.cpp  py_mesh.cpp  py_molecule.cpp  py_point_cloud.cpp  py_scene.cpp
bindings/python/tests/: .gitignore  run_all_tests.py  test_aabb.py  test_camera.py  test_engine.py  test_graph.py  test_jupyter_graph.ipynb  test_jupyter_point_cloud.ipynb  test_molecule.py  test_path.py  test_point_cloud.py  test_range.py  test_scene.py  test_transform.py  watcher.py
bindings/python/tests/data/: scene_1AGA.json
examples/: CMakeLists.txt  gl_example.cpp  optix_example.cpp  optix_headless_example.cpp
examples/data/: scene_1AGA.json
examples_diligent/diligent_pipeline_deffered_ball/: CMakeLists.txt
examples_diligent/diligent_pipeline_deffered_ball/assets/sphere/: sphere.psh  sphere.vsh
examples_diligent/diligent_pipeline_deffered_ball/data/: scene_1AGA.json  scene_2AGA.json
examples_diligent/diligent_pipeline_deffered_ball/src/: diligent_pipeline_deffered_ball.cpp  diligent_pipeline_deffered_ball.hpp  scene_2AGA.json
examples_diligent/diligent_pipeline_deffered_ball/src/data/: data.cpp  scene_1AGA.json
rvtx/: CMakeLists.txt
rvtx/core/: CMakeLists.txt
rvtx/core/include/rvtx/core/: aabb.hpp  aabb.inl  benchmark.hpp  benchmark.inl  color.hpp  color.inl  filesystem.hpp  image.hpp  logger.hpp  logger.inl  logger_formatters.hpp  math.hpp  math.inl  meta.hpp  path.hpp  path.inl  random.hpp  random.inl  spline.hpp  spline_helpers.hpp  time.hpp  type.hpp  type.inl
rvtx/core/include/rvtx/mesh/: loader.hpp  mesh.hpp
rvtx/core/include/rvtx/molecule/: color.hpp  loader.hpp  molecule.hpp  molecule.inl
rvtx/core/include/rvtx/system/: acceleration_structure.hpp  camera.hpp  camera.inl  material_parameters.hpp  molecule_ids.hpp  molecule_ids.inl  name.hpp  path_interpolator.hpp  path_interpolator.inl  procedural_molecule_generator.hpp  procedural_molecule_generator.inl  scene.hpp  scene_descriptor.hpp  serialization.hpp  transform.hpp  transform.inl  visibility.hpp
rvtx/core/include/rvtx/ux/: camera_controller.hpp  camera_controller.inl  controller.hpp  input.hpp
rvtx/core/src/core/: benchmark.cpp  filesystem.cpp  image.cpp  logger.cpp  math.cpp  time.cpp
rvtx/core/src/mesh/: loader.cpp  mesh.cpp
rvtx/core/src/molecule/: color.cpp  loader.cpp  molecule.cpp
rvtx/core/src/system/: acceleration_structure.cpp  camera.cpp  molecule_ids.cpp  procedural_molecule_generator.cpp  scene.cpp  scene_descriptor.cpp  transform.cpp
rvtx/core/src/ux/: camera_controller.cpp  input.cpp
rvtx/cuda/: CMakeLists.txt
rvtx/cuda/include/rvtx/cuda/: benchmark.cuh  buffer.cuh  buffer.inl  execution.cuh  math.cuh  memory.cuh  memory.inl  random.cuh  setup.cuh  setup.inl  type.cuh  type.inl  utility.cuh  utility.inl
rvtx/cuda/include/rvtx/cuda/gl_interop/: framebuffer.cuh  framebuffer.inl  graphics_device_buffer.cuh  graphics_device_buffer.inl
rvtx/cuda/src/cuda/: benchmark.cu  buffer.cu
rvtx/cuda/src/cuda/gl_interop/: framebuffer.cu  graphics_device_buffer.cu
rvtx/dil/: CMakeLists.txt
rvtx/dil/include/rvtx/dil/: renderer.hpp
rvtx/dil/shaders_hlsl/: full_screen.vsh  full_screen_debug.vsh  full_screen_id.vsh
rvtx/dil/shaders_hlsl/cylinder/: cylinder.gsh  cylinder.psh  cylinder.vsh
rvtx/dil/shaders_hlsl/shading/: bilateral_blur.psh  bilateral_blur_debug.psh  linearize_depth.psh  linearize_depth_debug.psh  ssao.psh  ssao_debug.psh  ssao_debug2.psh  ssao_verdict_debug.psh
rvtx/dil/shaders_hlsl/sphere/: sphere.gsh
rvtx/dil/shaders_hlsl/sphereNogs/: sphere.psh  sphere.vsh
rvtx/dil/src/: renderer.cpp
rvtx/dil/src/adapter/: diligent_input_adapter.cpp
rvtx/dil/src/geometry/: ball_and_stick_handler.cpp  ball_and_stick_holder.cpp  sphere_handler.cpp  sphere_holder.cpp
rvtx/dil/src/pass/: gbuffer.cpp  pass.cpp  post_process.cpp
rvtx/dil/src/utils/: buffer.cpp  pipeline_manager.cpp  program.cpp
rvtx/gl/: CMakeLists.txt
rvtx/gl/include/rvtx/gl/: renderer.hpp  renderer.inl  window.hpp  window.inl
rvtx/gl/shaders/geometry/: full_screen.vert
rvtx/gl/shaders/geometry/cylinder/: cylinder.frag  cylinder.geom  cylinder.vert
rvtx/gl/shaders/geometry/mesh/: mesh.frag  mesh.vert
rvtx/gl/shaders/geometry/sphere/: sphere.frag  sphere.geom  sphere.vert
rvtx/gl/shaders/shading/: diffuse.frag  flat.frag  glossy.frag  linearize_depth.frag  toon.frag
rvtx/gl/src/gl/: renderer.cpp  window.cpp
rvtx/gl/src/gl/core/: sampling.cpp
rvtx/gl/src/gl/geometry/: ball_and_stick_geometry.cpp  debug_primitives_geometry.cpp  mesh_geometry.cpp  sas_geometry.cpp  sesdf_geometry.cpp  sphere_geometry.cpp  ssesdf_geometry.cpp  sticks_geometry.cpp
rvtx/gl/src/gl/pass/: gbuffer.cpp  pass.cpp  post_process.cpp
rvtx/gl/src/gl/system/: debug_primitives.cpp
rvtx/gl/src/gl/utils/: buffer.cpp  program.cpp  snapshot.cpp  uniform.cpp
rvtx/raytracing/: CMakeLists.txt
rvtx/raytracing/include/rvtx/optix/: context.cuh  context.inl  denoiser.hpp  denoiser.inl  environment.cuh  environment.hpp  environment.inl  environment_sampler.cuh  environment_sampler.inl  geometry.cuh  geometry.inl  pipeline.cuh  pipeline.inl  program.cuh  program.inl  setup.cuh  texture.cuh  texture.inl
rvtx/raytracing/shaders/rvtx/optix/: data.cuh  memory.cuh  path_tracer.cu
rvtx/raytracing/src/optix/: context.cu  denoiser.cpp  environment.cpp  environment.cu  environment_sampler.cu  geometry.cu  pipeline.cu  program.cu  texture.cu
rvtx/raytracing/src/optix/geometry/: multi_geometry_pipeline.cu
rvtx/ui/: CMakeLists.txt
(+104 files in other folders)
